--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -23,3 +23,6 @@ pycovdown = "pycovdown.plugin"
 
 [tool.hatch.build.targets.wheel]
 packages = ["pycovdown"]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
