Update path to project for zip

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -71,7 +71,7 @@ jobs:
         shell: bash
         run: |
           ls -R
-          zip pycovdown.zip -r pycovdown
+          zip pycovdown.zip -r src/pycovdown
 
       - name: Release version
         shell: bash
