pass project path to create_release

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,3 +78,4 @@ jobs:
         run: python3 src/tools/create_release.py
         env:
           GITHUB_TOKEN: ${{ github.token }}
+          PROJECT_PATH: src
